# sage-climate-agent-orchestrator

./: Makefile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
n8n/workflows/: sage_monitoring.json
src/: logging_config.py
src/data/: feature_engineering_v2.py  feature_engineering_v3.py  loader.py  loader_v3.py  preprocessing.py  preprocessing_v2.py
src/evaluation/: evaluator.py  metrics.py  visualization.py
src/metrics/: collector.py
src/models/: attention.py  attention_v3.py  backbone.py  backbone_v2.py  heads.py  heads_v2.py  heads_v3.py
src/serving/: api.py  inference.py
src/training/: optimizer_v2.py  optimizer_v3.py  scheduler.py  trainer.py  trainer_v2.py  trainer_v3.py
src/types/: stubs.py
src/utils/: config.py  logging_utils.py  sage_connector.py
tests/: test_api.py  test_evaluation.py  test_loader.py  test_model.py  test_training.py
